footer fix color contrast

--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-    background: $dark-moderate-cyan;
+    background: #91CABF;
     display: flex;
     flex-direction: column;
     align-items: center;
