--- a/style/style.css
+++ b/style/style.css
@@ -504,7 +504,7 @@ section .bg_image {
   }
 }
 footer {
-  background: hsl(168deg, 34%, 41%);
+  background: #91CABF;
   display: flex;
   flex-direction: column;
   align-items: center;
